setup swagger for cat controller
